<resources>
    <string name="app_name">Recipe App</string>
    <string name="recipes">Recipes</string>
    <string name="favorites">Favorites</string>
    <string name="food_jokes">Food Jokes</string>
    <string name="details">Details</string>
    <string name="overview">Overview</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>

    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="finger_food">Finger Food</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>

    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="low_fodmap">Low FODMAP</string>
    <string name="whole30">Whole30</string>

    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="cheap">Cheap</string>
    <string name="healthy">Healthy</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="no_recipes_saved">No Recipes Saved.</string>
    <string name="delete_favorites">Delete Favorites</string>
    <string name="delete_all">Delete All</string>
    <string name="share">Share</string>

    <string name="refresh">Refresh</string>
    <string name="open_bottom_sheet">Open bottom sheet</string>
    <string name="error_image">Error image</string>
    <string name="load_cache">Load Cache?</string>
    <string name="cache_is_empty">Cache Is Empty.</string>
</resources>