<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.OverviewFragment">

    <ImageView
        android:id="@+id/iv_main"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/gradient_overlay"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintBottom_toBottomOf="@id/iv_main"
        app:layout_constraintEnd_toEndOf="@id/iv_main"
        app:layout_constraintStart_toStartOf="@id/iv_main"
        app:layout_constraintTop_toTopOf="@id/iv_main"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_main"
        app:layout_constraintEnd_toEndOf="@id/iv_main"
        tools:text="100" />

    <ImageView
        android:id="@+id/iv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_access_time"
        app:layout_constraintBottom_toTopOf="@id/tv_time"
        app:layout_constraintEnd_toEndOf="@id/tv_time"
        app:layout_constraintStart_toStartOf="@id/tv_time"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tv_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_time"
        app:layout_constraintEnd_toStartOf="@id/tv_time"
        tools:text="100" />

    <ImageView
        android:id="@+id/iv_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite"
        app:layout_constraintBottom_toTopOf="@id/tv_likes"
        app:layout_constraintEnd_toEndOf="@id/tv_likes"
        app:layout_constraintStart_toStartOf="@id/tv_likes"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/courgette"
        android:textColor="@color/darkGray"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_main"
        tools:text="Title" />

    <ImageView
        android:id="@+id/iv_vegetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check_circle"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/tv_vegetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegetarian"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@id/iv_vegetarian"
        app:layout_constraintStart_toEndOf="@id/iv_vegetarian"
        app:layout_constraintTop_toTopOf="@id/iv_vegetarian" />

    <ImageView
        android:id="@+id/iv_vegan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check_circle"
        app:layout_constraintStart_toStartOf="@id/iv_vegetarian"
        app:layout_constraintTop_toBottomOf="@id/iv_vegetarian"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/tv_vegan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegan"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@id/iv_vegan"
        app:layout_constraintStart_toEndOf="@id/iv_vegan"
        app:layout_constraintTop_toTopOf="@id/iv_vegan" />

    <ImageView
        android:id="@+id/iv_gluten_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_check_circle"
        app:layout_constraintBottom_toBottomOf="@id/tv_vegetarian"
        app:layout_constraintStart_toEndOf="@id/tv_vegetarian"
        app:layout_constraintTop_toTopOf="@id/tv_vegetarian"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/tv_gluten_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gluten_free"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@id/iv_gluten_free"
        app:layout_constraintStart_toEndOf="@id/iv_gluten_free"
        app:layout_constraintTop_toTopOf="@id/iv_gluten_free" />

    <ImageView
        android:id="@+id/iv_dairy_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check_circle"
        app:layout_constraintStart_toStartOf="@id/iv_gluten_free"
        app:layout_constraintTop_toBottomOf="@id/iv_gluten_free"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/tv_dairy_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/dairy_free"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@id/iv_dairy_free"
        app:layout_constraintStart_toEndOf="@id/iv_dairy_free"
        app:layout_constraintTop_toTopOf="@id/iv_dairy_free" />

    <ImageView
        android:id="@+id/iv_healthy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_check_circle"
        app:layout_constraintBottom_toBottomOf="@id/tv_gluten_free"
        app:layout_constraintStart_toEndOf="@id/tv_gluten_free"
        app:layout_constraintTop_toTopOf="@id/tv_gluten_free"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/tv_healthy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/healthy"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@id/iv_healthy"
        app:layout_constraintStart_toEndOf="@id/iv_healthy"
        app:layout_constraintTop_toTopOf="@id/iv_healthy" />

    <ImageView
        android:id="@+id/iv_cheap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check_circle"
        app:layout_constraintStart_toStartOf="@id/iv_healthy"
        app:layout_constraintTop_toBottomOf="@id/iv_healthy"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/tv_cheap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cheap"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@id/iv_cheap"
        app:layout_constraintStart_toEndOf="@id/iv_cheap"
        app:layout_constraintTop_toTopOf="@id/iv_cheap" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_vegan">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="Description" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>